[package]
name = "miio-proto"
version = "0.1.2"
edition = "2021"
license = "MIT/Apache-2.0"
description = "MIIO protocol implementation."
keywords = ["miio", "networking", "protocol"]
authors = ["Evgenii Lepikhin"]
repository = "https://github.com/johnlepikhin/miio-proto"
categories = ["api-bindings"]
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
log = "0"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
packed_struct = "0"
md5 = "0"
block-modes = "0"
aes = "0"
